--- a/Middleware_practica/ui/MainWindow.ui
+++ b/Middleware_practica/ui/MainWindow.ui
@@ -157,7 +157,10 @@
     </property>
     <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
+    <addaction name="separator"/>
     <addaction name="actionSave"/>
+    <addaction name="actionSave_As"/>
+    <addaction name="separator"/>
     <addaction name="actionExit_2"/>
    </widget>
    <addaction name="menuFile"/>
@@ -185,6 +188,11 @@
   <action name="actionExit_2">
    <property name="text">
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As</string>
    </property>
   </action>
  </widget>
